# copilot-kinect

./: .gitignore  AGENTS.md  README.md  app.py  config.example.toml  prek.toml  pyproject.toml  skills-lock.json
.opencode/plans/: phase1_implementation_plan.md
clustering/: cluster_analysis.md
data/: kinect_alignment_profiles.json
docs/: architecture_analysis.md  esp32_common_cathode_rgb_led_wiring.md  kinect_v2_python_vscode_setup.md  notes.txt  optimization_roadmap.md  project_file_map.md  web_design.md
esp32/: README.md  boot.py  main.py  strip.py
models/yolo/: README.md
reels/: record_rgb_nir.py
reports/system_quantitative/: README.md
scripts/: calibrate_quad_alignment.py  check_gpu_runtime.py  check_led_strip.py  check_led_strip_tcp.py  evaluate_video_identity_flow.py  test_kinect.py
src/: config.py
src/led/: led_strip_driver.py
src/vision/: attendance_pipeline.py  detector.py  face_recognition_db.py  kinect_service.py  pose_depth_metrics.py  region_focus.py  rgb_depth_alignment.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: _dashboard_scripts.html  dashboard.html  led.html
tests/: test_attendance_stream.py  test_config.py  test_detector_bbox.py  test_face_recognition_db.py  test_led_strip_driver.py  test_pose_depth_metrics.py  test_region_focus.py
