[project]
name = "copilot-kinect"
version = "0.1.0"
description = "Windows-oriented Flask classroom analytics app with Kinect, YOLO, and InsightFace."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "Flask==3.1.3",
    "requests==2.33.0",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "opencv-python==4.13.0.92",
    "pillow==12.1.1",
    "matplotlib==3.10.8",
    "scikit-learn==1.7.2",
    "torch==2.13.0+cu130 ; platform_system == 'Windows'",
    "torchvision==0.28.0+cu130 ; platform_system == 'Windows'",
    "ultralytics==8.4.31",
    "onnxruntime-gpu[cuda,cudnn]==1.24.4 ; platform_system == 'Windows'",
    "insightface==1.0.1",
    "comtypes==1.4.16 ; platform_system == 'Windows'",
    "pykinect2 ; platform_system == 'Windows'",
    "tomli>=2.0,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
pythonpath = ["."]

[tool.uv]
package = false
override-dependencies = [
    # onnxruntime-gpu 自帶所有必要檔案，排除 CPU 版避免覆蓋 capi 元件
    "onnxruntime; sys_platform == 'never'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "platform_system == 'Windows'" }]
torchvision = [{ index = "pytorch-cu130", marker = "platform_system == 'Windows'" }]
pykinect2 = { git = "https://github.com/Kinect/PyKinect2.git", rev = "c86d575175edf5fc0834590acdfb82b55b5ccd96" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "coverage>=7.15.0",
    "pytest>=9.1.1",
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["reels", "scripts", "clustering"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.basedpyright]
typeCheckingMode = "basic"
include = ["src"]
exclude = ["reels", "scripts", "clustering"]
reportMissingImports = false
reportMissingModuleSource = false
reportUntitledVariable = false

